syntax = "proto3";

package message;

// Run protoc --gofast_out=. message.proto to generate message.pb.go

// Message models a single message that is supposed to get exchanged by the
// gossip network
message Message {
  reserved 2, 3, 6;
  string ChannelID = 1;
  repeated bytes TargetIDs = 4;
  bytes Payload = 5;
}
